styles/Home.module.css
.profilepicture {
  border-radius: 20px;
}

.bighello {
  display: flex;
  justify-content: center;
  margin-top: 50px;
}

@media (max-width: 800px) {
  .bighello {
    flex-direction: column;
    margin: auto;
    width: 250px;
    text-align: center;
  }

  .profilepicture {
    margin: auto;
  }

  .icons {
    margin: auto;
  }

  .bighelloright {
    margin-left: 0 !important;
  }
}

.bighelloright {
  margin-left: 20px;
  display: flex;
  flex-direction: column;
  align-content: center;
}

.bighellotitle {
  font-size: 50px;
  margin-top: 0px;
  margin-bottom: 10px;
}

.icons {
  display: flex;
}

.icon {
  padding-right: 10px;
  position: relative;
  transition: 50ms;
}

.icon:hover {
  /*color: #2BA84A;*/

  transform: translateY(-3px);
}

.name {
  color: #2BA84A;
}

.mainScreen {
  height: 100vh;
}

.scrollDown {
  width: fit-content;
  margin: auto;
  /* position: absolute; */
  position: absolute;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  left: 50%;
  bottom: 5px;
  text-align: center;
}

